// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-customer-name is disabled when logged in 1`] = `
<sc-customer-name logged-in="" size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="name" disabled="" help="" name="name" type="text" value=""></sc-input>
  </mock:shadow-root>
</sc-customer-name>
`;

exports[`sc-customer-name renders 1`] = `
<sc-customer-name size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="name" help="" name="name" type="text" value=""></sc-input>
  </mock:shadow-root>
</sc-customer-name>
`;
